--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ requires = ["pdm-pep517>=1.0.0"]
 build-backend = "pdm.pep517.api"
 
 [project.entry-points."plastex.plugin"]
-plastexPlugin = "gerybPlasTeXPlugin"
+gerbyPasTeXPlugin = "gerybPlasTeXPlugin"
